--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
     - name: Show PR environment variables
-      run: env
+      run: |
+        env
+        echo ${github.pull_request}
+        echo ${github.event}
       env:
         GITHUB_REPOSITORY: ${{ github.pull_request.event.repo }}
         BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
