--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,8 @@ jobs:
       run: env | sort
       env:
         Z_GITHUB_REPOSITORY: ${{ github.pull_request.event.repo }}
-        Z_BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+        Z_GITHUB_PR_USER: ${{ env.GITHUB_ACTOR }} 
+        Z_GITHUB_PR_HEAD_REPO: ${{ github.event.pull_request.head.repo.name }}
+        Z_GITHUB_PR_HEAD_REF: ${{ github.event.pull_request.head.ref }}
+        Z_GITHUB_PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
         Z_GITHUB_OWNER: ${{ github.repository_owner }} 
-        Z_HEAD_NAME: ${{ github.event.pull_request.head.repo.name }}
