--- a/.github/workflows/binder-badge.yaml
+++ b/.github/workflows/binder-badge.yaml
@@ -13,8 +13,8 @@ jobs:
         script: |
           # var BRANCH_NAME = process.env.BRANCH_NAME;
           var PR_HEAD_USER = process.env.GITHUB_ACTOR;
-          var PR_HEAD_REPO = process.env.PR_HEAD_REPO
-          var PR_HEAD_SHA = process.env.PR_HEAD_SHA
+          var PR_HEAD_REPO = process.env.PR_HEAD_REPO;
+          var PR_HEAD_SHA = process.env.PR_HEAD_SHA;
           github.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
