--- a/.github/workflows/binder-badge.yaml
+++ b/.github/workflows/binder-badge.yaml
@@ -11,7 +11,7 @@ jobs:
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
         script: |
-          # var BRANCH_NAME = process.env.BRANCH_NAME;
+          var BRANCH_NAME = process.env.BRANCH_NAME;
           var PR_HEAD_USER = process.env.GITHUB_ACTOR;
           var PR_HEAD_REPO = process.env.PR_HEAD_REPO;
           var PR_HEAD_SHA = process.env.PR_HEAD_SHA;
